# f2bgl

./: .gitignore  CMakeLists.txt  cutscene.cpp  file.cpp  game.cpp  glad.cpp  glad.h  main.cpp  menu.cpp  mixer.cpp  render.cpp  render.h  resource.cpp  saveload.cpp  sound.cpp  stub.cpp  stub.h  texturecache.cpp  util.cpp  util.h  xmiplayer.cpp
res/shaders/: Makefile  replace_alpha_f.cg  replace_alpha_f.gxp  replace_alpha_fog_f.cg  replace_alpha_fog_f.gxp  texture2d_fog_v.cg  texture2d_fog_v.gxp  texture2d_v.cg  texture2d_v.gxp  vertex_f.gxp  vertex_fog_f.cg  vertex_fog_f.gxp  vertex_fog_v.cg  vertex_fog_v.gxp  vertex_v.cg  vertex_v.gxp
